--- a/src/components/Content/Albums/Album/Photos/PhotoCard/PhotoCard.scss
+++ b/src/components/Content/Albums/Album/Photos/PhotoCard/PhotoCard.scss
@@ -1,8 +1,18 @@
 .PhotoCard {
-
+    position: relative;
     display: inline-flex;
 
     img {
+        cursor: pointer;
+    }
+
+    .delete-btn {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        color: red;
+        background-color: white;
+        padding: 5px;
         cursor: pointer;
     }
 }
