--- a/src/components/Content/Albums/Album/Album.scss
+++ b/src/components/Content/Albums/Album/Album.scss
@@ -1,4 +1,13 @@
 .Album {
-    padding: 20px;
-    margin: 0 20px 30px;
+    padding: 0 20px 20px;
+    margin: 0 20px 0;
+
+    .album-title {
+        position: sticky;
+        top: 57px;
+        padding-bottom: 5px;
+        margin: 0;
+        background-color: white;
+        z-index: 1;
+    }
 }
