--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,4 +7,14 @@
     h1 {
         margin-bottom: 0;
     }
+
+    .add-btn {
+        position: absolute;
+        left: 20px;
+        bottom: 7px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: bold;
+    }
 }
