Added some error handling and styling

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -16,5 +16,9 @@
         justify-content: center;
         align-items: center;
         font-weight: bold;
+        border: solid 1px;
+        padding: 5px 10px;
+        background-color: #fff;
+        cursor: pointer;
     }
 }
