--- a/src/components/Content/Albums/Album/Photos/PhotoCard/PhotoCard.scss
+++ b/src/components/Content/Albums/Album/Photos/PhotoCard/PhotoCard.scss
@@ -6,6 +6,14 @@
         cursor: pointer;
     }
 
+    textarea {
+        border: none;
+        background-color: #f5f5f5;
+        padding: 10px;
+        font-weight: bold;
+        width: 150px;
+    }
+
     .delete-btn {
         position: absolute;
         bottom: 0;
@@ -13,6 +21,7 @@
         color: red;
         background-color: white;
         padding: 5px;
+        font-size: 30px;
         cursor: pointer;
     }
 }
